# selfie_carolocup

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md
src/Control/drive_multiplexer/: CMakeLists.txt  README.md  package.xml
src/Control/drive_multiplexer/config/: default.yaml
src/Control/drive_multiplexer/launch/: drive_multiplexer_example.launch
src/Control/pid_carrot_follower/: CMakeLists.txt  README.md  package.xml
src/Control/pid_carrot_follower/cfg/: ControlCalculator.cfg  pidTuner.cfg
src/Control/pid_carrot_follower/config/: default.yaml  sim.yaml
src/Control/pid_carrot_follower/include/pid_carrot_follower/: pid_tuner.h
src/Control/pid_carrot_follower/launch/: pid_carrot_follower_example.launch
src/Control/pid_carrot_follower/scripts/: const_float64.py  control_calculator.py
src/Control/pid_carrot_follower/src/: cmd_creator.cpp  pid_tuner.cpp  pid_tuner_node.cpp
src/Control/pid_carrot_follower/test/: path_publisher.py
src/Hardware/odometry/: CMakeLists.txt  README.md  package.xml
src/Hardware/odometry/config/: default.yaml
src/Hardware/odometry/include/odometry/: odometry.h
src/Hardware/odometry/launch/: odometry_example.launch
src/Hardware/odometry/src/: odometry.cpp  odometry_node.cpp
src/Hardware/stm32_bridge/: CMakeLists.txt  README.md  package.xml
src/Hardware/stm32_bridge/cfg/: stm32_bridge.cfg
src/Hardware/stm32_bridge/config/: default.yaml
src/Hardware/stm32_bridge/include/stm32_bridge/: bridge.h  usb.hpp
src/Hardware/stm32_bridge/launch/: stm32_bridge_example.launch
src/Hardware/stm32_bridge/src/: bridge.cpp  main.cpp  usb.cpp
src/Navigation/lane_pilot/: CMakeLists.txt  README.md  package.xml
src/Navigation/lane_pilot/cfg/: lane_pilot.cfg
src/Navigation/lane_pilot/config/: default.yaml  sim.yaml
src/Navigation/lane_pilot/include/lane_pilot/: lane_pilot.hpp
src/Navigation/lane_pilot/launch/: lane_pilot_example.launch
src/Navigation/lane_pilot/src/: lane_pilot.cpp  lane_pilot_node.cpp
src/Navigation/lane_pilot/test/: mock_road_obstacle.py
src/Navigation/path_generator/: CMakeLists.txt  README.md  package.xml
src/Navigation/path_generator/cfg/: PathGenerator.cfg
src/Navigation/path_generator/config/: default.yaml
src/Navigation/path_generator/launch/: path_generator_example.launch
src/Navigation/path_generator/scripts/: path_generator_node.py
src/Perception/lane_detector/: CMakeLists.txt  README.md  package.xml
src/Perception/lane_detector/config/: default.yaml  homography_sim.yaml  sim.yaml
src/Perception/lane_detector/include/lane_detector/: definitions.h  lane_detector.h  particle_filter.h  polynomials.h  road_line.h
src/Perception/lane_detector/launch/: lane_detector_example.launch  tune_params.launch
src/Perception/lane_detector/scripts/: make_hom_cut_file
src/Perception/lane_detector/src/: detect_markings.cpp  lane_detector.cpp  particle_filter.cpp  polynomials.cpp  road_line.cpp
src/Perception/lidar_euclidean_cluster_detect/: CMakeLists.txt  package.xml
src/Perception/lidar_euclidean_cluster_detect/config/: params.yaml
src/Perception/lidar_euclidean_cluster_detect/include/: cluster.h  merging_and_clustering.h  prepare_data.h
src/Perception/lidar_euclidean_cluster_detect/launch/: euclidean_clustering_Exp.launch  lidar_euclidean_cluster_detect.launch
src/Perception/lidar_euclidean_cluster_detect/src/: cluster.cpp  detect_obstacles.cpp  gencolors.cpp  merging_and_clustering.cpp  prepare_data.cpp
src/Perception/obstacle_detector/: CMakeLists.txt  README.md  package.xml
src/Perception/obstacle_detector/cfg/: obstacle_detector.cfg
src/Perception/obstacle_detector/config/: default.yaml  sim.yaml
src/Perception/obstacle_detector/launch/: obstacle_detector_example.launch
src/Perception/obstacle_detector/src/: obstacle_detector.cpp  obstacles_generator.cpp
src/Perception/odometry/: CMakeLists.txt  README.md  package.xml
src/Perception/odometry/src/: odometry.cpp  odometry_node.cpp
src/Perception/realsense_obstacle_detector/: CMakeLists.txt  README.md  package.xml
src/Perception/realsense_obstacle_detector/cfg/: realsense_obstacle_detector.cfg
src/Perception/realsense_obstacle_detector/src/: main.cpp
src/Perception/sign_detector/: CMakeLists.txt  README.md  package.xml
src/Perception/sign_detector/config/: default.yaml
src/Perception/sign_detector/data/: classes.txt  znaki.cfg
src/Perception/sign_detector/launch/: sign_detector_example.launch
src/Perception/sign_detector/scripts/: sign_detector.py
src/Perception/vision/: CMakeLists.txt  README.md  package.xml
src/Perception/vision/cfg/: debugger.cfg  homography.cfg  intersection_stop.cfg  lane_detector.cfg  segmentation.cfg  starting_line.cfg  vision.cfg
src/Perception/vision/config/: default.yaml
src/Perception/vision/launch/: vision_example.launch
src/Perception/vision/src/: vision.cpp  vision_manager.cpp
src/Shared/common/: CMakeLists.txt  README.md  package.xml  setup.py
src/Shared/common/src/common/: __init__.py  (+5 more)
src/Shared/custom_msgs/: CMakeLists.txt  README.md  package.xml  setup.py
src/Shared/custom_msgs/action/: driving.action  intersection.action  park.action  search.action  starting.action
src/Shared/custom_msgs/msg/: Box2D.msg  Box2DArray.msg  Box3D.msg  Box3DArray.msg  Buttons.msg  DriveCommand.msg  Indicators.msg  IntersectionStop.msg  Motion.msg  ProbableSign.msg  ProbableSignArray.msg
src/Startup/diagnostics/: CMakeLists.txt  package.xml  setup.py
src/Startup/diagnostics/config/: default.yaml
src/Startup/diagnostics/launch/: diagnostics_example.launch
src/Startup/diagnostics/scripts/: State.py  Tester.py  diagnose.py
src/Startup/startup/: CMakeLists.txt  package.xml
src/Startup/startup/launch/: all.launch  dpc.launch  only_logic.launch  sim.launch
src/Tasks/free_drive/: CMakeLists.txt  README.md  package.xml
src/Tasks/free_drive/cfg/: free_drive.cfg
src/Tasks/free_drive/config/: default.yaml  sim.yaml
src/Tasks/free_drive/launch/: free_drive_example.launch
src/Tasks/free_drive/src/: free_drive.cpp  free_drive_server.cpp
(+290 files in other folders)
