<?xml version="1.0"?>
<package format="2">
  <name>drive_multiplexer</name>
  <version>0.0.0</version>
  <description>The drive_multiplexer package</description>

  <maintainer email="knr@knr.com">knr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>topic_tools</depend>

  <build_depend>roslint</build_depend>
  <build_export_depend>roslint</build_export_depend>

  <exec_depend>roslint</exec_depend>
</package>
