<?xml version="1.0"?>
<package format="2">
  <name>pid_carrot_follower</name>
  <version>0.0.0</version>
  <description>The pid_carrot_follower package</description>

  <maintainer email="knr@knr.com">knr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pid</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>ackermann_msgs</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roslint</depend>
  <depend>geometry_msgs</depend>
</package>
