<?xml version="1.1"?>
<package format="2">
  <name>stm32_bridge</name>
  <version>0.0.0</version>
  <description>The stm32_bridge package</description>

  <maintainer email="KNR@email.com">KNR</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>roslint</depend>
  <depend>tf</depend>
  <depend>common</depend>

</package>
