<?xml version="1.0"?>
<package format="2">
  <name>lane_pilot</name>
  <version>0.0.0</version>
  <description>The lane_pilot package</description>


  <maintainer email="KNR@gmail.com">Paweł Kotiuk</maintainer>

  <license>TODO</license> 

  <buildtool_depend>catkin</buildtool_depend>  
  <export>
  </export>

<depend>roscpp</depend>
<depend>custom_msgs</depend>
<depend>actionlib</depend>
<depend>common</depend>
<depend>geometry_msgs</depend>
<depend>dynamic_reconfigure</depend>
<depend>roslint</depend>
</package>