<?xml version="1.0"?>
<package format="2">
  <name>path_generator</name>
  <version>0.0.0</version>
  <description>The path_generator package</description>

  <maintainer email="knr@todo.todo">knr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslint</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>custom_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>

</package>
