<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detector</name>
  <version>0.0.0</version>
  <description>The obstacle_detector package</description>

  <maintainer email="KNR@email.com">KNR</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>custom_msgs</depend>
  <depend>common</depend>
  <depend>roslint</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>


</package>
