<?xml version="1.0"?>
<package format="2">
  <name>odometry</name>
  <version>0.0.0</version>
  <description>The odometry package</description>

  <maintainer email="KNR@email.com">KNR</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <depend>roslint</depend>

</package>
