<?xml version="1.0"?>
<package format="2">
  <name>sign_detector</name>
  <version>0.0.0</version>
  <description>Nie sadzilem, ze ktos to kiedykolwiek przeczyta</description>

  <maintainer email="maciej@todo.todo">maciej</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>custom_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python3-opencv</build_depend>

  <build_export_depend>custom_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>python3-opencv</build_export_depend>

  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>

  </export>
</package>
