<?xml version="1.0"?>
<package format="2">
  <name>common</name>
  <version>0.0.0</version>
  <description>The common package</description>
  <maintainer email="KNR@gmail.com">Selfie</maintainer>

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>custom_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>roslint</depend>
  <depend>moveit_ros_planning_interface</depend>
  

</package>