<?xml version="1.0"?>
<package format="2">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>The custom_msgs package</description>
  <maintainer email="KNR@gmail.com">Selfie</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>

</package>