<?xml version="1.0"?>
<package format="2">
  <name>diagnostics</name>
  <version>0.0.0</version>
  <description>The diagnostics package</description>

  <maintainer email="kielczykowski@todo.todo">kielczykowski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roslint</depend>

</package>
