<?xml version="1.0"?>
<package format="2">
  <name>startup</name>
  <version>0.0.0</version>
  <description>The startup package</description>

  <maintainer email="knr@todo.todo">knr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>obstacle_detector</depend>
  <depend>odometry</depend>
  <depend>free_drive</depend>
  <depend>intersection</depend>
  <depend>park</depend>
  <depend>parking_spot_detector</depend>
  <depend>scheduler</depend>
  <depend>starting_procedure</depend>
  <depend>diagnostics</depend>
  <depend>lane_detector</depend>
  <depend>path_generator</depend>
  <depend>lane_pilot</depend>
  <depend>stm32_bridge</depend>
  <depend>selfie_basler_fisheye</depend>
  <depend>pid_carrot_follower</depend>
  <depend>drive_multiplexer</depend>

</package>
